--- a/daon/css/layout.css
+++ b/daon/css/layout.css
@@ -6,6 +6,48 @@
 
 ul,li{list-style: none; margin:0; padding:0;}
 
+/* new */
+
+.parall{transition:.5s ease-out;}
+
+.pContents {overflow:hidden; width:100%; margin:0px !important}
+.parallax{position:relative; width:100%; margin:0 auto;}
+.pSection01, .pSection02, .pSection03, .pSection04, .pSection05, .pSection06 {overflow:hidden; position:absolute; left:50%; width:100%; transform:translateX(-50%);}
+.pSection01 > *, .pSection02 > *, .pSection03 > *, .pSection04 > *, .pSection05 > *, .pSection06 > * {position:absolute; background-size: cover;}
+
+
+.tripwrap{height:2700px;}
+.layout01{top:0px; background:url('../imgs/pension_view_01.jpg') no-repeat left top; background-size: cover; height:1200px; z-index:1000;}
+.layout02{top:1200px; height:1000px; z-index:2000; background:#f6f6f6;}
+
+
+.pSection01 div{
+    width:100%; height:100%;
+    text-align: center;
+    top: 40%;
+    transform: translateY(-25%);
+    color:white;
+}
+.pSection01 div h2{font-size:50px;}
+.pSection01 div p{
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+}
+.pSection01 div h4{
+    font-size: 14px;
+    font-weight: 200;
+}
+.layout01::after{
+    content: '';
+    background:rgba(0,0,0,0.5);
+    position:absolute;
+    left:0;top:0;
+    width:100%; height:100%;
+    z-index:-1;
+}
+
+
+.layout_spot{padding-top:10%;}
 .layout_spot .subtitle{
     margin-top:0;
 }
@@ -16,18 +58,39 @@ ul,li{list-style: none; margin:0; padding:0;}
     width:80%;
     margin:0 auto;
     text-align:center;
-}
-.layout_con1 p{
-    margin:40px 0;
+    padding-top:5%;
 }
 
-.layout_con1 span{
-    width:1px; height:80px;
-    background:#1c222e;
-    display:block;
-    margin:0 auto 40px;;
-}
+
 .layout_con1 img{width:100%;}
+
+.place-title{
+    font-size:30px;
+    text-align:center;
+    padding-bottom:15px;
+    margin-bottom:20px;
+    position:relative;
+}
+.place-title::after{
+    content: '';
+    width:50%;
+    height:1px;
+    position:absolute;
+    bottom:0; left:50%;
+    transform: translateX(-50%);
+    background:black;
+}
+.place-title span{
+    font-size:16px;
+    display:inline-block;
+    margin-left:10px;
+}
+.spot_txt p{
+    text-align: center;
+    white-space: pre-line;
+    font-size:14px;
+    line-height:1.5em;
+}
 
 /* --------------responsive----------- */
 
