--- a/daon/css/main.css
+++ b/daon/css/main.css
@@ -106,36 +106,7 @@
     background-color:white;
 }
 
-/* scroll down */
-svg{
-    width: 300px;
-    position: absolute;
-    left: 50%;
-    bottom: -5%;
-    transform: translateX(-50%);
-    stroke: white;
-    fill: white;
-    animation:scrollLoad 1s 1s cubic-bezier(0.42, 0, 0.29, 0.98) both;
-}
-@keyframes scrollLoad{
-    0%{opacity:0; width: 400px;}
-    100%{opacity:1; width:300px;}
-}
 
-.down{
-    animation:scroll 1s 1s cubic-bezier(0, 0, 0.76, 0.29) infinite;
-}
-@keyframes scroll{
-    0%{opacity:0;}
-    100%{opacity:1;}
-}
-
-.down:nth-of-type(1){
-    animation-delay: 0.3s;
-}
-.down:nth-of-type(2){
-    animation-delay: 0.35s;
-}
 
 
 
@@ -250,7 +221,7 @@ svg{
 
 /* main_con2 */
 .main_con2{
-    
+    padding-bottom:10%;
     width:80%; margin:0 auto;
 }
 .main_con2 figure{
