--- a/daon/css/reservation.css
+++ b/daon/css/reservation.css
@@ -3,12 +3,52 @@
 /* font-family: 'Noto Sans HK', sans-serif; */
 @import url('./common.css');
 
+/* new */
 
+.parall{transition:.5s ease-out;}
+
+.pContents {overflow:hidden; width:100%; margin:0px !important}
+.parallax{position:relative; width:100%; margin:0 auto;}
+.pSection01, .pSection02, .pSection03, .pSection04, .pSection05, .pSection06 {overflow:hidden; position:absolute; left:50%; width:100%; transform:translateX(-50%);}
+.pSection01 > *, .pSection02 > *, .pSection03 > *, .pSection04 > *, .pSection05 > *, .pSection06 > * {position:absolute; background-size: cover;}
+
+
+.tripwrap{height:3000px;}
+.reservation01{top:0px; background:url('../imgs/reservation_title.jpg') no-repeat left top; background-size: cover; height:1200px; z-index:1000;}
+.reservation02{top:1200px; height:2000px; z-index:2000; background:#f6f6f6;}
+
+
+.pSection01 div{
+    width:100%; height:100%;
+    text-align: center;
+    top: 40%;
+    transform: translateY(-25%);
+    color:white;
+}
+.pSection01 div h2{font-size:50px;}
+.pSection01 div p{
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+}
+.pSection01 div h4{
+    font-size: 14px;
+    font-weight: 200;
+}
+.reservation01::after{
+    content: '';
+    background:rgba(0,0,0,0.5);
+    position:absolute;
+    left:0;top:0;
+    width:100%; height:100%;
+    z-index:-1;
+}
 
 
 /* reser_spot */
 .reserv_spot{
-    width:80%; margin:0 auto;
+    width:80%;
+    margin-left: 10%;
+    padding-top: 10%;
 }
 .reserv_spot div{
     width:100%;
