--- a/daon/css/travel.css
+++ b/daon/css/travel.css
@@ -7,6 +7,37 @@
 
 ul,li{list-style: none; margin:0; padding:0;}
 
+/* new */
+
+.parall{transition:.5s ease-out;}
+
+.pContents {overflow:hidden; width:100%; margin:0px !important}
+.parallax{position:relative; width:100%; margin:0 auto;}
+.pSection01, .pSection02, .pSection03, .pSection04, .pSection05, .pSection06 {overflow:hidden; position:absolute; left:50%; width:100%; transform:translateX(-50%);}
+.pSection01 > *, .pSection02 > *, .pSection03 > *, .pSection04 > *, .pSection05 > *, .pSection06 > * {position:absolute; background-size: cover;}
+
+
+.tripwrap{height:7300px;}
+.trip01{top:0px; background:url('../imgs/travle_title.jpg') no-repeat left top; background-size: cover; height:1200px; z-index:1000;}
+.trip02{top:1200px; height:4800px; z-index:2000; background:#f6f6f6;}
+.trip02 .subtitle h2 span{background:#f6f6f6 !important;}
+
+.pSection01 div{
+    width:100%; height:100%;
+    text-align: center;
+    top: 40%;
+    transform: translateY(-25%);
+    color:white;
+}
+.pSection01 div h2{font-size:50px;}
+.pSection01 div p{
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+}
+.pSection01 div h4{
+    font-size: 14px;
+    font-weight: 200;
+}
 
 
 /* main */
@@ -14,6 +45,7 @@ ul,li{list-style: none; margin:0; padding:0;}
 
 
 /* prologue_spot */
+.prologue_spot{padding-top:10%;}
 .prologue_spot .subtitle{
     margin-top:0;
 }
