--- a/daon/css/layout.css
+++ b/daon/css/layout.css
@@ -21,12 +21,14 @@ ul,li{list-style: none; margin:0; padding:0;}
 .layout02{top:1200px; height:1000px; z-index:2000; background:#f6f6f6;}
 
 
-.pSection01 div{
+.pSection01 div:nth-of-type(1){
     width:100%; height:100%;
     text-align: center;
-    top: 40%;
-    transform: translateY(-25%);
+    top:30%;
     color:white;
+}
+.pSection01 div:nth-of-type(2){
+    width:100%;height:100%;
 }
 .pSection01 div h2{font-size:50px;}
 .pSection01 div p{
