--- a/daon/css/reservation.css
+++ b/daon/css/reservation.css
@@ -15,15 +15,17 @@
 
 .tripwrap{height:3000px;}
 .reservation01{top:0px; background:url('../imgs/reservation_title.jpg') no-repeat left top; background-size: cover; height:1200px; z-index:1000;}
-.reservation02{top:1200px; height:2000px; z-index:2000; background:#f6f6f6;}
+.reservation02{top:1200px; height:2300px; z-index:2000; background:#f6f6f6;}
 
 
-.pSection01 div{
+.pSection01 div:nth-of-type(1){
     width:100%; height:100%;
     text-align: center;
-    top: 40%;
-    transform: translateY(-25%);
+    top:30%;
     color:white;
+}
+.pSection01 div:nth-of-type(2){
+    width:100%;height:100%;
 }
 .pSection01 div h2{font-size:50px;}
 .pSection01 div p{
@@ -42,17 +44,33 @@
     width:100%; height:100%;
     z-index:-1;
 }
+.about-inner{
+    animation:fontAni 2s ease both;
+}
+@keyframes fontAni {
+    0%{
+        transform:scale(0.9);
+        opacity:0;
+    }
+    100%{
+        transform:scale(1);
+        opacity:1;
+    }
+}
 
 
 /* reser_spot */
 .reserv_spot{
-    width:80%;
-    margin-left: 10%;
-    padding-top: 10%;
+    width:100%;
 }
-.reserv_spot div{
+.reserv_spot_01{
+    padding-top:10%;
+}
+.reserv_spot > div{
     width:100%;
     margin-bottom:40px;
+    width:80%;
+    margin-left: 10%;
 }
 .reserv_spot div h4{
     margin:20px 0;
@@ -66,7 +84,7 @@
     margin:auto 10px auto 0;
     /* margin-right:10px; */
 }
-.reserv_spot div p{
+.reserv_spot > div p{
     white-space: pre-line;
     font-size:14px;
     line-height: 2em;
@@ -117,35 +135,20 @@
 @media (max-width:480px){
     html{width:100%;}
     main{margin:42px 0 0;}
-    .prologue_title {
-        width:100%; margin:0 auto;
-        overflow: hidden;
+
+    .pSection01 div:nth-of-type(1){
+        top:15%;
     }
-    .prologue_title figure {
-        position:relative;
-        width:200%;
+    .pSection01 div h2{
+        font-size:40px;
     }
-    .prologue_title figure img{
-        transform:translateX(-40%);
+    .pSection01 div h4{
+        width: 80%;
+        margin: 0 auto;
     }
-    .prologue_title figure figcaption {
-        transform:translateX(-25%);
-        color:black;
-    }
-    .prologue_title figure figcaption p{
-        font-size:1rem;
-    }
-    .prologue_title figure figcaption small{
-        font-size:0.7rem;
-    }
-    .prologue_tab ul li{
-        width:6rem; height:1.5rem;
-        line-height: 1.4rem;
-    }
-    .prologue_tab ul li a{
-        display:inline-block;
-        font-size:0.7rem;
-    }
+    .tripwrap{height:4100px;}
+
+ 
 
     .refund{width:100%;
     overflow-x: scroll;}
