--- a/daon/css/room2.css
+++ b/daon/css/room2.css
@@ -4,144 +4,246 @@
 @import url('./common.css');
 
 
-ul,li{list-style: none; margin:0; padding:0;}
-main{
-    margin:0 !important;
-    overflow: hidden;
+ul,
+li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
+main {
+    margin: 0 !important;
+    overflow: hidden;
+    width:100%;
+    position:fixed;
+    left:0; top:0;
+}
 
+body{width:100%; height:100%;}
 /* new */
 
-.roomwrap{
-    width:100%; height:100vh;
-    overflow: hidden;
+.about-inner{
+    animation:fontAni 2s ease both;
 }
-.roomwrap div{width:100%; height:100%;}
-.roomwrap div figure{width:100%; height:100%;}
-.roomwrap div figure img{width:100%; height:100%;}
-.roommain figure{
-    position:relative;
+@keyframes fontAni {
+    0%{
+        transform:scale(0.9);
+        opacity:0;
+    }
+    100%{
+        transform:scale(1);
+        opacity:1;
+    }
 }
-.roommain-txt{
-    position:absolute;
-    width:100%; height:100%;
-    text-align: center;
-    top: 40%;
-    transform: translateY(-20%);
-    color:white;
-    z-index:11;
-}
-.room_preview{
-    position:relative;
-}
-.main_mouse{z-index:11;}
-.room_info{
+
+.scrollitem{
     position:absolute;
     left:0; top:0;
-    width:100%; height:100%;
+    z-index: 1001;
+}
+
+.roomwrap {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.roomwrap div {
+    width: 100%;
+    height: 100%;
+}
+
+.roomwrap div figure {
+    width: 100%;
+    height: 100%;
+}
+
+.roomwrap div figure img {
+    width: 100%;
+    height: 100%;
+}
+
+.roommain figure {
+    position: relative;
+}
+
+.roommain-txt {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    top:30%;
+    color: white;
+    z-index: 11;
+}
+
+
+.room_preview {
+    position: relative;
+}
+
+.main_mouse {
+    z-index: 11;
+}
+
+.room_info {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 
 }
-.room_info h2{font-size:30px;}
-.room_info h2 span{
-    font-size:20px;
-    position:relative;
-    padding-top:5px;
-    display:inline-block;
+
+.room_info h2 {
+    font-size: 30px;
 }
-.room_info a{
+
+.room_info h2 span {
+    font-size: 20px;
+    position: relative;
+    padding-top: 5px;
+    display: inline-block;
+}
+
+.room_info a {
     text-decoration: none;
-    font-size:20px;
-    color:white;
-    margin-top:10px;
+    font-size: 20px;
+    color: white;
     overflow: hidden;
+    height:0;
+    margin:0;
 }
-.room_info a span{
-    transform:translateY(100%);
-    display:inline-block;
-    transition:all 0.4s ease-out;
+
+.room_info a span {
+    transform: translateY(100%);
+    display: inline-block;
+    transition: all 0.4s ease-out;
 }
-.room_info p{
+
+.room_info p {
     letter-spacing: 5px;
-    margin-bottom: 10px;
     overflow: hidden;
+    height:0;
+    margin:0;
 }
-.room_info p span{
-    transform:translateY(100%);
-    display:inline-block;
-    transition:all 0.4s ease-out;
+
+.room_info p span {
+    transform: translateY(100%);
+    display: inline-block;
+    transition: all 0.4s ease-out;
 }
-.room_info div{
-    position:relative;
-    display:flex;
+
+.room_info div {
+    position: relative;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color:white;
-    z-index:11;
-    text-align:center;
-    transform:scale(1);
-    transition:all 0.4s ease-out;
+    color: white;
+    z-index: 11;
+    text-align: center;
+    transform: scale(1);
+    transition: all 0.4s ease-out;
 }
-.room_info div::before{
-    content:'';
-    width:300px; height:1px;
-    background:white;
-    position:absolute;
-    left:50%; top:45%;
-    transform:translate(-50%,-50%);
-    transition:all 0.4s ease-out;
+
+.room_info div::before {
+    content: '';
+    width: 300px;
+    height: 1px;
+    background: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 0.4s ease-out;
 }
-.roommain{position:relative;}
-.roommain:before{
+
+.roommain {
+    position: relative;
+}
+
+.roommain:before {
     content: '';
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
     top: 0;
-    background: rgba(0,0,0,0.4);
+    background: rgba(0, 0, 0, 0.4);
     z-index: 10;
 }
-.roommain div h2{font-size:50px;}
-.roommain div p{
+
+.roommain div h2 {
+    font-size: 50px;
+}
+
+.roommain div p {
     letter-spacing: 5px;
     margin-bottom: 10px;
 }
-.roommain div h4{
+
+.roommain div h4 {
     font-size: 14px;
     font-weight: 200;
 }
 
-.room_preview:before{
+.room_preview:before {
     content: '';
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
     top: 0;
-    background: rgba(0,0,0,0);
+    background: rgba(0, 0, 0, 0);
     z-index: 10;
-    transition:all 0.4s ease-out;
+    transition: all 0.4s ease-out;
 }
-.room_preview:hover:before{
-    background:rgba(0,0,0,0.4);
+
+.room_preview:hover:before {
+    background: rgba(0, 0, 0, 0.4);
 }
-.room_preview:hover > .room_info a {
-    display:block;
+
+.room_preview:hover>.room_info a {
+    display: block;
 }
-.room_preview:hover > .room_info p {
-    display:block;
+
+.room_preview:hover>.room_info p {
+    display: block;
 }
-.room_preview:hover > .room_info div::before{
-    top:56%;
+
+.room_preview:hover>.room_info div::before {
+    top: calc(50% + 50px);
 }
-.room_preview:hover > .room_info a span{
-    transform:translateY(0%);
+.room_preview:hover>.room_info a{
+    height:29px;
+    margin-top:10px;
 }
-.room_preview:hover > .room_info p span{
-    transform:translateY(0%);
+
+.room_preview:hover>.room_info a span {
+    transform: translateY(0%);
 }
-.room_preview:hover > .room_info div{
-    transform:scale(1.3);
+
+.room_preview:hover>.room_info p{
+    height:24px;
+    margin-top:10px;
+}
+.room_preview:hover>.room_info p span {
+    transform: translateY(0%);
+}
+
+.room_preview:hover>.room_info div {
+    transform: scale(1.3);
+}
+
+@media (max-width:480px){
+    .roommain div h2{
+        font-size:40px;
+    }
+    .roommain div h4{
+        width:80%; margin:0 auto;
+    }
+    .sub_mouse{
+        bottom:-5% !important;
+    }
 }
