--- a/daon/css/special.css
+++ b/daon/css/special.css
@@ -16,7 +16,7 @@
 
 .tripwrap{height:2300px;}
 .special01{top:0px;  height:100vh; z-index:1000;}
-.special02{top:800px; height:1100px; z-index:2000; background:#f6f6f6;}
+.special02{top:800px; height:1500px; z-index:2000; background:#f6f6f6;}
 
 .pSection01 div{
     width:100%; height:100%;
@@ -198,7 +198,6 @@
 .all_special{
     width:100%; height:100%;
     margin:0 auto;
-    padding-bottom:150px;
 }
 .all_special article{
     width:80%; margin:0 auto;
@@ -259,85 +258,38 @@ footer{
 @media (max-width:480px){
     html{width:100%;}
     main{margin:42px 0 0;}
-    .prologue_title {
-        width:100%; margin:0 auto;
-        overflow: hidden;
-    }
-    .prologue_title figure {
-        position:relative;
-        width:200%;
-    }
-    .prologue_title figure img{
-        transform:translateX(-40%);
-    }
-    .prologue_title figure figcaption {
-        transform:translateX(-25%);
-        color:white;
-    }
-    .prologue_title figure figcaption p{
-        font-size:1rem;
-    }
-    .prologue_title figure figcaption small{
-        font-size:0.7rem;
-    }
+
 
     /* slide */
     .slidewrap{height:50%;}
     .slides{height:100%;}
     .direc div img{width:8%;}
 
-    /* tab */
-
-    .prologue_tab{
-        padding:7% 0;
-        width:100%; margin:0 auto;
+    .special01{
+        height:50%;
     }
-    .prologue_tab ul{
-        display:block;
-        text-align:center;
-        width:80%; margin:0 auto;
+    .special02{
+        top:400px;
     }
-    .prologue_tab ul li{
-        display: inline-block;
-        margin:2% auto;
-        width:40%; height:1.5rem;
-        background: #e5e5e5;
-        text-align: center;
-        line-height: 1.4rem;
+    .tripwrap{height:1900px;}
+    .place-wrap{
+        flex-wrap: wrap;
+        height: 300px;
     }
-    .prologue_tab ul li a{
-        font-size:0.7rem;
-        display:inline-block;
+    .place-wrap div{
+        width:50%;
     }
-    
-    .special_spot .spot_txt p{
-        margin-bottom:20px;
-        font-size:0.8rem;
+    .pla h2{
+        font-size:16px;
     }
-    .special_spot .spot_txt p:nth-of-type(1){
-        margin-bottom:30px;
+    .pla p{
+        width:100px;
+        margin:10px auto 0;
     }
-    .special_spot.spot_txt p:nth-of-type(2) small{
+    .pla p a{
         font-size:12px;
     }
-    .all_special{padding-bottom:60px;}
-    .all_special article span{
-        width:1px; height:60px;
-        background:#1c222e; 
-        display:block;
-        margin:0 auto;
-        transform:translateY(60%);
+    footer{
+        margin-top:300px;
     }
-    .all_special article p{
-        margin: 60px 0 40px;
-    }
-    .all_special div figure figcaption a{
-        height:2em;
-        line-height:2em;
-        font-size:10px;
-    }
-    .all_special div figure:hover figcaption a{
-        display:none;
-    }
-
 }
