--- a/daon/css/travel.css
+++ b/daon/css/travel.css
@@ -17,17 +17,19 @@ ul,li{list-style: none; margin:0; padding:0;}
 .pSection01 > *, .pSection02 > *, .pSection03 > *, .pSection04 > *, .pSection05 > *, .pSection06 > * {position:absolute; background-size: cover;}
 
 
-.tripwrap{height:7300px;}
+.tripwrap{height:8615px;}
 .trip01{top:0px; background:url('../imgs/travle_title.jpg') no-repeat left top; background-size: cover; height:1200px; z-index:1000;}
-.trip02{top:1200px; height:4800px; z-index:2000; background:#f6f6f6;}
+.trip02{top:1200px; height:5500px; z-index:2000; background:#f6f6f6;}
 .trip02 .subtitle h2 span{background:#f6f6f6 !important;}
 
-.pSection01 div{
+.pSection01 div:nth-of-type(1){
     width:100%; height:100%;
     text-align: center;
-    top: 40%;
-    transform: translateY(-25%);
+    top:30%;
     color:white;
+}
+.pSection01 div:nth-of-type(2){
+    width:100%;height:100%;
 }
 .pSection01 div h2{font-size:50px;}
 .pSection01 div p{
@@ -37,6 +39,19 @@ ul,li{list-style: none; margin:0; padding:0;}
 .pSection01 div h4{
     font-size: 14px;
     font-weight: 200;
+}
+.about-inner{
+    animation:fontAni 2s ease both;
+}
+@keyframes fontAni {
+    0%{
+        transform:scale(0.9);
+        opacity:0;
+    }
+    100%{
+        transform:scale(1);
+        opacity:1;
+    }
 }
 
 
@@ -150,7 +165,22 @@ ul,li{list-style: none; margin:0; padding:0;}
 @media (max-width:480px){
     html{width:100%;}
     main{margin:42px 0 0;}
-
+    .pSection01 div:nth-of-type(1){
+        top:15%;
+    }
+    .pSection01 div h2{
+        font-size:40px;
+    }
+    .pSection01 div h4{
+        width: 80%;
+        margin: 0 auto;
+    }
+    .tripwrap{
+        height:9650px;
+    }
+    .about01{
+        background-position:center;
+    }
 
     .prologue_title {
         width:100%; margin:0 auto;
