--- a/daon/css/common.css
+++ b/daon/css/common.css
@@ -308,7 +308,7 @@ table{border-collapse:collapse;}
 /* footer */
 
 footer{
-    width:100%; height:100%;
+    width:100%; height:200px;
     margin:100px auto 0;
     background:#1c222e;
     z-index: 3000;
@@ -324,13 +324,7 @@ footer{
     justify-content: center;
     align-items: center;
 }
-/* .foot div {
-    padding:3% 0;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-} */
+
 .foot p{
     font-size:12px;
     color:white;
