--- a/daon/css/common.css
+++ b/daon/css/common.css
@@ -3,7 +3,7 @@
 
 
 
-html, body{width:100%; margin:0; background:#f6f6f6;}
+html, body{width:100%; margin:0; background:white;}
 p,figure,h1,h2,h3,h4,h5,h6{margin:0;}
 ul,li{list-style: none; margin:0; padding:0;}
 *{
@@ -16,7 +16,6 @@ a{text-decoration: none;
 }
 main{
     width:100%;
-    margin:45px auto 0;
 }
 .gallery{z-index:1001;}
 
@@ -117,11 +116,7 @@ header{
     display:none;
     text-align: center;
 }
-/* .head .menu .last .submenu{
-    position:absolute;
-    left:0; bottom:0;
-    transform: translateY(100%) translateX(-10%);
-} */
+
 .head .menu .submenu li{
     text-align: center;
 }
@@ -297,7 +292,7 @@ header{
     left:50%;
     transform:translateX(-50%) translateY(-50%);
     padding:0 20px; 
-    background:#f6f6f6;
+    background:white;
     font-size:18px;
 }
 
@@ -309,7 +304,6 @@ table{border-collapse:collapse;}
 
 footer{
     width:100%; height:200px;
-    margin:100px auto 0;
     background:#1c222e;
     z-index: 3000;
 }
