--- a/daon/css/layout.css
+++ b/daon/css/layout.css
@@ -6,65 +6,69 @@
 
 ul,li{list-style: none; margin:0; padding:0;}
 
-/* new */
+/* layout */
 
-.parall{transition:.5s ease-out;}
-
-.pContents {overflow:hidden; width:100%; margin:0px !important}
-.parallax{position:relative; width:100%; margin:0 auto;}
-.pSection01, .pSection02, .pSection03, .pSection04, .pSection05, .pSection06 {overflow:hidden; position:absolute; left:50%; width:100%; transform:translateX(-50%);}
-.pSection01 > *, .pSection02 > *, .pSection03 > *, .pSection04 > *, .pSection05 > *, .pSection06 > * {position:absolute; background-size: cover;}
-
-
-.tripwrap{height:2700px;}
-.layout01{top:0px; background:url('../imgs/pension_view_01.jpg') no-repeat left top; background-size: cover; height:1200px; z-index:1000;}
-.layout02{top:1200px; height:1000px; z-index:2000; background:#f6f6f6;}
-
-
-.pSection01 div:nth-of-type(1){
-    width:100%; height:100%;
-    text-align: center;
-    top:30%;
-    color:white;
+.imgHolder {
+    height: 30em;
+    overflow: hidden;
+    position: relative;
 }
-.pSection01 div:nth-of-type(2){
-    width:100%;height:100%;
-}
-.pSection01 div h2{font-size:50px;}
-.pSection01 div p{
-    letter-spacing: 5px;
-    margin-bottom: 10px;
-}
-.pSection01 div h4{
-    font-size: 14px;
-    font-weight: 200;
-}
-.layout01::after{
+.imgHolder::after{
     content: '';
-    background:rgba(0,0,0,0.5);
+    width:100%; height: 100%;
+    background:rgba(0,0,0,0.3);
     position:absolute;
-    left:0;top:0;
-    width:100%; height:100%;
-    z-index:-1;
+    left:0; top:0;
+}
+
+.imgHolder img {
+    width: 100%;
+    min-height: 500px;
+    left: 50%;
+    -webkit-transform: translate(-50%, -10%);
+    -ms-transform: translate(-50%, -10%);
+    transform: translate(-50%, -10%);
+    position: absolute;
+}
+
+.title {
+    position: absolute;
+    font-size: 2em;
+    font-weight: 100;
+    background: rbga(22, 41, 35, 0.5);
+    color: #fff;
+    letter-spacing: 0.2em;
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    text-align: center;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.header:hover {
+    cursor: default;
 }
 
 
-.layout_spot{padding-top:10%;}
-.layout_spot .subtitle{
-    margin-top:0;
+
+
+
+/* ------------------------layout_con1------------------------ */
+
+.layout_spot{
+    margin: 0 10%;
+    padding:10% 0;
 }
-
-
-/* layout_con1 */
 .layout_con1{
-    width:80%;
-    margin:0 auto;
-    text-align:center;
-    padding-top:5%;
+    width: 100%;
 }
 
-
-.layout_con1 img{width:100%;}
+.layout_con1 img{
+    width: 100%;
+}
 
 .place-title{
     font-size:30px;
@@ -87,11 +91,14 @@ ul,li{list-style: none; margin:0; padding:0;}
     display:inline-block;
     margin-left:10px;
 }
+.spot_txt {
+    margin-bottom: 50px;
+}
 .spot_txt p{
     text-align: center;
     white-space: pre-line;
     font-size:14px;
-    line-height:1.5em;
+    line-height:1.6em;
 }
 
 /* --------------responsive----------- */
