--- a/daon/css/prologue.css
+++ b/daon/css/prologue.css
@@ -5,111 +5,114 @@
 
 ul,li{list-style: none; margin:0; padding:0;}
 
-/* new */
-.parall{transition:.5s ease-out;}
+/* layout */
 
-.pContents {overflow:hidden; width:100%; margin:0px !important}
-.parallax{position:relative; width:100%; margin:0 auto;}
-.pSection01, .pSection02, .pSection03, .pSection04, .pSection05, .pSection06 {overflow:hidden; position:absolute; left:50%; width:100%; transform:translateX(-50%);}
-.pSection01 > *, .pSection02 > *, .pSection03 > *, .pSection04 > *, .pSection05 > *, .pSection06 > * {position:absolute; background-size: cover;}
-
-.aboutwrap{height:4200px;}
-.about01 {top:0px; background:url('../imgs/about_title.jpg') no-repeat left top; background-size: cover; height:1200px;}
-.about02 {top:1200px; background:url('../imgs/about_04.jpg') no-repeat left top; z-index:1000; background-size: cover;height:1200px;}
-.about03 {top:2400px; z-index:2000;height:2000px;}
-
-
-.pSection01 div:nth-of-type(1){
-    width:100%; height:100%;
-    text-align: center;
-    top:30%;
-}
-.pSection01 div:nth-of-type(2){
-    width:100%;height:100%;
-}
-.pSection01 div h2{
-    font-size:50px;
+.imgHolder {
+    height: 30em;
     overflow: hidden;
-}
-.pSection01 div p{
-    letter-spacing: 5px;
-    margin-bottom: 10px;
-    overflow: hidden;
-}
-.pSection01 div h4{
-    font-size: 14px;
-    font-weight: 200;
-    overflow: hidden;
+    position: relative;
 }
 
-.about-inner{
-    animation:fontAni 2s ease both;
+.imgHolder img {
+    width: 100%;
+    min-height: 500px;
+    left: 50%;
+    -webkit-transform: translate(-50%, -10%);
+    -ms-transform: translate(-50%, -10%);
+    transform: translate(-50%, -10%);
+    position: absolute;
 }
-@keyframes fontAni {
-    0%{
-        transform:scale(0.9);
-        opacity:0;
-    }
-    100%{
-        transform:scale(1);
-        opacity:1;
-    }
-}
-
-.about-inner h2 span{
-    display:inline-block;
-    
-}
-.about-inner p span{
-    display:inline-block;
-    
-}
-.about-inner h4 span{
-    display:inline-block;
-   
-}
-
-
-.about02 article{
-    width:100%; height:100%;
-    text-align: left;
-    top: 300px; left: 10%;
-    transform: translateY(-25%);
-    color:white;
-    z-index:999;
-    width: 800px;
-    height: 300px;
-    border: 1px solid white;
-    padding: 3%;
-    display:flex; flex-direction: column;
-    justify-content: center;
-}
-.about02 article h2{font-size:50px;}
-.about02 article p{
-    line-height:1.5em;
-}
-.about02 article p:nth-of-type(1){padding-bottom:10px;}
-.about02::after{
+.imgHolder::after{
     content: '';
-    background:rgba(0,0,0,0.5);
+    width:100%; height: 100%;
+    background:rgba(0,0,0,0.3);
     position:absolute;
-    left:0;top:0;
-    width:100%; height:100%;
+    left:0; top:0;
 }
 
-.about03{
-    background:#f6f6f6;
-    margin:0 auto;
+.title {
+    position: absolute;
+    font-size: 2em;
+    font-weight: 100;
+    background: rbga(22, 41, 35, 0.5);
+    color: #fff;
+    letter-spacing: 0.2em;
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    text-align: center;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
+
+.header:hover {
+    cursor: default;
+}
+
+
+
+.about_welcome{
+    text-align: right;
+    padding: 10% 10% 0 10%;
+    line-height: 1.5em;
+}
+.about_welcome h1{
+    text-align: right;
+    line-height: 1.5em;
+    font-size:25px;
+    margin-bottom:10px;
+}
+.about_welcome > div{
+    
+}
+
+
+.about_landscape{
+    display: flex;
+    justify-content: flex-end;
+    width:100%;
+    padding: 10% 0;
+    position:relative;
+}
+.about_landscape img{
+    width: 25%;
+    padding-left: 10px;
+}
+
+.about_landscape::after{
+    content: '';
+    width: 75%;
+    height: 0.8px;
+    background: #eaeaea;
+    position: absolute;
+    top: 15%;
+    right: 0;
+}
+
+.about_landscape::before{
+    content: '';
+    width: 75%;
+    height: 0.8px;
+    background: #eaeaea;
+    position: absolute;
+    bottom: 15%;
+    left: 0;
+}
+
+
 .about03 .loca-wrap{
     width:100%; height:100%;
     left:0;
-    padding:5% 0;
+    padding: 0 10%;
 }
-.about03 .loca-wrap > div{
-    text-align:center;
+.about03 .loca-wrap .loca_title{
+    text-align:left;
 }
-.about03 .loca-wrap > div h2{
+
+
+.about03 .loca-wrap .loca_title h2{
     font-size:30px;
 }
 .letter p{
@@ -118,8 +121,7 @@ ul,li{list-style: none; margin:0; padding:0;}
 }
 .loca_info{
     text-align:left;
-    width: 50%;
-    margin: 0 auto;
+    margin-top: 50px;
 }
 .loca_info ul li{
     display:flex;
@@ -128,186 +130,21 @@ ul,li{list-style: none; margin:0; padding:0;}
 }
 .icon{margin-right:10px;}
 .map{
-    width:100%;
-    padding:5% 0;
+    width:80%;
 }
 .map div{
     width:100%; height:100%;
-    margin: 0 auto;
+    margin:0;
 }
-
-
-
-/* main */
-
-.prologue_title figure figcaption{
-    width:100%;
-    position:absolute;
-    left:0%; bottom:35%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-
-/* prologue_spot */
-.prologue_spot .subtitle{
-    margin-top:0;
-}
-
-
-/* prologue_wel */
-.prologue_wel{width:100%;}
-.prologue_wel div{
-    width:80%; margin:0 auto;}
-.prologue_wel div:nth-of-type(1) figure{
-    width: 66.666%;
-    padding-right: 20px;
-}
-.prologue_wel div figure img{width:100%;}
-.prologue_wel div:nth-of-type(1){
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.prologue_wel div:nth-of-type(1) p{
-    width:33.333%; margin:0;
-    white-space: pre-line;
-    padding-left:3%;
-}
-
-.prologue_wel div:nth-of-type(1) p b{
-    font-size:16px;
-}
-.prologue_wel div:nth-of-type(1) p span{
-    font-size:14px;
-    line-height:1.5em;
-}
-
-.about-img{
-    padding-top:5%;
-    width:80%;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top:40px;
-    margin-bottom:40px;
-}
-.about-img figure{
-    width:100%; margin-right:20px;
-}
-
-.about-img-one{
-    transform:translateY(20%);
-    opacity:0;
-    transition: all 0.5s 0.3s cubic-bezier(.25,.25,.75,.75);
-}
-.about-img-two{
-    transform:translateY(30%);
-    opacity:0;
-    transition: all 0.5s 0.5s cubic-bezier(.25,.25,.75,.75);
-}
-.about-img-three{
-    transform:translateY(40%);
-    opacity:0;
-    margin-right:0;
-    transition: all 0.5s 0.7s cubic-bezier(.25,.25,.75,.75);
-}
-.about-img-one.active{
-    transform:translateY(0);
-    opacity:1;
-}
-.about-img-two.active{
-    transform:translateY(0);
-    opacity:1;
-}
-.about-img-three.active{
-    transform:translateY(0);
-    opacity:1;
-}
-
-
-
-.about-img figure img{
-    width:100%; vertical-align: middle;
+.mapWrap{
+    padding: 5% 0;
 }
 
 
 
 
-/* prologue_land */
-.prologue_land > article{
-    width:80%; margin:0 auto;
-}
-
-/* land_text */
-
-.prologue_land .land_text{
-    white-space: pre-line;
-    display:flex;
-    flex-direction:column;
-    justify-content: center;
-    align-items: center;
-    width:100%; margin:0 auto 4%;
-    text-align:center;
-    
-}
-.prologue_land .land_text p{
-    font-size:25px;
-    
-}
-.prologue_land .land_text span{
-    font-size:14px;
-    margin-top:8px;    
-}
-.prologue_land .land_text span:nth-of-type(1){
-    font-size:13px;
-}
-.prologue_land .land_text span:nth-of-type(2){
-    margin-top:4%;
-    line-height:1.7em; 
-}
 
 
-/* land slide */
-
-/* slide */
-.slidewrap{
-    position:relative;
-    overflow: hidden;
-}
-.slides{
-    width:100%; height:600px;
-}
-.slides div{
-    display:flex;
-    width: 100%;
-    height:100%;
-    transition:1.5s;
-}
-.slides div img{
-    min-width: 100%;
-}
-
-/* direc */
-
-.direc{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-.direc div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 0 10%;
-}
 
 
 
