--- a/daon/css/room_01.css
+++ b/daon/css/room_01.css
@@ -5,54 +5,13 @@
 
 /* new */
 
-.parall{transition:.5s ease-out;}
 
-.pContents {overflow:hidden; width:100%; margin:0px !important}
-.parallax{position:relative; width:100%; margin:0 auto;}
-.pSection01, .pSection02, .pSection03, .pSection04, .pSection05, .pSection06 {overflow:hidden; position:absolute; left:50%; width:100%; transform:translateX(-50%);}
-.pSection01 > *, .pSection02 > *, .pSection03 > *, .pSection04 > *, .pSection05 > *, .pSection06 > * {position:absolute; background-size: cover;}
-
-
-.tripwrap{height:3400px;}
-.special01{top:0px;  height:100vh; z-index:1000;}
-.special02{top:800px; height:2000px; z-index:2000; background:#f6f6f6;}
-
-.pSection01 div{
-    width:100%; height:100%;
-    text-align: center;
-    color:white;
-}
-.pSection01 div h2{font-size:50px;}
-.pSection01 div p{
-    letter-spacing: 5px;
-    margin-bottom: 10px;
-}
-.pSection01 div h4{
-    font-size: 14px;
-    font-weight: 200;
-}
-.place-title{
-    font-size:30px;
-    text-align:center;
-    padding-bottom:15px;
-    margin-bottom:20px;
-    position:relative;
-}
-.place-title::after{
-    content: '';
-    width:50%;
-    height:1px;
-    position:absolute;
-    bottom:0; left:50%;
-    transform: translateX(-50%);
-    background:black;
-}
 
 /* slide */
 
 .gallery{width:100%;}
 .slidewrap{
-    width:80%; margin:0 auto;
+    width:100%; margin:0 auto;
     position:relative;
     overflow: hidden;
 }
@@ -67,6 +26,7 @@
 }
 .slides div img{
     min-width: 100%;
+    object-fit: cover;
 }
 
 /* direc */
@@ -94,10 +54,10 @@
 }
 .spot_txt{
     width:80%; margin:0 auto;
+    padding:10% 0;
 }
 .popup{
     width:100%; height:100%;
-    background:#f6f6f6;
 }
 .popup.detail{
     display:block;
