--- a/daon/css/travel.css
+++ b/daon/css/travel.css
@@ -4,59 +4,51 @@
 @import url('./common.css');
 
 
-
+/* layout */
 ul,li{list-style: none; margin:0; padding:0;}
+.imgHolder {
+    height: 30em;
+    overflow: hidden;
+    position: relative;
+}
 
-/* new */
+.imgHolder img {
+    width: 100%;
+    min-height: 500px;
+    left: 50%;
+    -webkit-transform: translate(-50%, -10%);
+    -ms-transform: translate(-50%, -10%);
+    transform: translate(-50%, -10%);
+    position: absolute;
+}
+.imgHolder::after{
+    content: '';
+    width:100%; height: 100%;
+    background:rgba(0,0,0,0.3);
+    position:absolute;
+    left:0; top:0;
+}
 
-.parall{transition:.5s ease-out;}
-
-.pContents {overflow:hidden; width:100%; margin:0px !important}
-.parallax{position:relative; width:100%; margin:0 auto;}
-.pSection01, .pSection02, .pSection03, .pSection04, .pSection05, .pSection06 {overflow:hidden; position:absolute; left:50%; width:100%; transform:translateX(-50%);}
-.pSection01 > *, .pSection02 > *, .pSection03 > *, .pSection04 > *, .pSection05 > *, .pSection06 > * {position:absolute; background-size: cover;}
-
-
-.tripwrap{height:8615px;}
-.trip01{top:0px; background:url('../imgs/travle_title.jpg') no-repeat left top; background-size: cover; height:1200px; z-index:1000;}
-.trip02{top:1200px; height:5500px; z-index:2000; background:#f6f6f6;}
-.trip02 .subtitle h2 span{background:#f6f6f6 !important;}
-
-.pSection01 div:nth-of-type(1){
-    width:100%; height:100%;
+.title {
+    position: absolute;
+    font-size: 2em;
+    font-weight: 100;
+    background: rbga(22, 41, 35, 0.5);
+    color: #fff;
+    letter-spacing: 0.2em;
+    top: 50%;
+    left: 50%;
+    width: 80%;
     text-align: center;
-    top:30%;
-    color:white;
-}
-.pSection01 div:nth-of-type(2){
-    width:100%;height:100%;
-}
-.pSection01 div h2{font-size:50px;}
-.pSection01 div p{
-    letter-spacing: 5px;
-    margin-bottom: 10px;
-}
-.pSection01 div h4{
-    font-size: 14px;
-    font-weight: 200;
-}
-.about-inner{
-    animation:fontAni 2s ease both;
-}
-@keyframes fontAni {
-    0%{
-        transform:scale(0.9);
-        opacity:0;
-    }
-    100%{
-        transform:scale(1);
-        opacity:1;
-    }
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
-
-/* main */
-
+.header:hover {
+    cursor: default;
+}
 
 
 /* prologue_spot */
