--- a/daon/css/room.css
+++ b/daon/css/room.css
@@ -135,7 +135,15 @@ a{
 }
 /* --------------responsive----------- */
 
-@media (max-width:480px){
-
-
+@media (max-width:768px){
+    .Room_wrap{
+        align-items: flex-start;
+    }
+    .roomList{
+        flex-direction: column;
+    }
+    .roomList li{
+        width:100%;
+        margin-bottom: 10%;
+    }
 }
