--- a/daon/css/special.css
+++ b/daon/css/special.css
@@ -10,7 +10,8 @@
 
 .place-wrap{
     display:flex;
-    width:100%; height:600px;
+    width:100%;
+    height:500px;
 }
 .place-wrap div{
     width:33.333%; height:100%;
@@ -23,6 +24,7 @@
 .place-wrap div h2 span{
     display:block;
 }
+
 
 .pla h2{
     font-size:24px;
@@ -232,29 +234,28 @@ footer{
 
 /* --------------responsive----------- */
 
-@media (max-width:480px){
-    html{width:100%;}
-    main{margin:42px 0 0;}
+@media (max-width:768px){
+
 
 
     /* slide */
     .slidewrap{height:50%;}
     .slides{height:100%;}
     .direc div img{width:8%;}
-
-    .special01{
-        height:50%;
+    .place-title{
+        font-size: 20px;
     }
-    .special02{
-        top:400px;
+    .place-title span{
+        font-size: 14px;
     }
-    .tripwrap{height:1900px;}
     .place-wrap{
         flex-wrap: wrap;
-        height: 300px;
+        height:auto;
     }
+
     .place-wrap div{
         width:50%;
+        height:400px;
     }
     .pla h2{
         font-size:16px;
@@ -266,7 +267,5 @@ footer{
     .pla p a{
         font-size:12px;
     }
-    footer{
-        margin-top:300px;
-    }
+
 }
