--- a/css/prologue.css
+++ b/css/prologue.css
@@ -17,9 +17,9 @@ ul,li{list-style: none; margin:0; padding:0;}
     width: 100%;
     min-height: 500px;
     left: 50%;
-    -webkit-transform: translate(-50%, -10%);
-    -ms-transform: translate(-50%, -10%);
-    transform: translate(-50%, -10%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
     position: absolute;
 }
 .imgHolder::after{
@@ -153,26 +153,34 @@ ul,li{list-style: none; margin:0; padding:0;}
 
 @media (max-width:768px){
     html{width:100%;}
-    .pSection01 div:nth-of-type(1){
-        top:15%;
-    }
-    .pSection01 div h2{
-        font-size:40px;
-    }
-    .pSection01 div h4{
-        width: 80%;
-        margin: 0 auto;
+
+    .title{
+        font-size:1.5em;
     }
     .about_welcome > div{
         font-size:12px;
         line-height:1.5em;
     }
-    .about_landscape img{
-        width:33.3333%;
+    .about_landscape{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
+    .about_landscape img{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    
     .about01{
         background-position:center;
     }
+
+    .about_landscape::before,
+    .about_landscape::after {
+        display: none;
+        visibility: hidden;
+    }
+
     .loca_info{
         width:80%;
         margin: 5% auto 0;
@@ -198,6 +206,8 @@ ul,li{list-style: none; margin:0; padding:0;}
     .about03 .loca-wrap{
         padding:10% 0;
     }
+
+    
 
 
 }
