--- a/css/reservation.css
+++ b/css/reservation.css
@@ -22,9 +22,9 @@
     width: 100%;
     min-height: 500px;
     left: 50%;
-    -webkit-transform: translate(-50%, -10%);
-    -ms-transform: translate(-50%, -10%);
-    transform: translate(-50%, -10%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
     position: absolute;
 }
 
