--- a/css/room.css
+++ b/css/room.css
@@ -18,9 +18,9 @@ a{
     width: 100%;
     min-height: 500px;
     left: 50%;
-    -webkit-transform: translate(-50%, -10%);
-    -ms-transform: translate(-50%, -10%);
-    transform: translate(-50%, -10%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform:translateX(-50%);
+    transform: translateX(-50%);
     position: absolute;
 }
 .imgHolder::after{
@@ -137,10 +137,20 @@ a{
 
 @media (max-width:768px){
     .Room_wrap{
-        align-items: flex-start;
+        flex-direction: column;
+
+    }
+    .roomName{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
     }
     .roomList{
         flex-direction: column;
+    }
+    .roomList_container{
+        width: 100%;
     }
     .roomList li{
         width:100%;
