--- a/css/room_01.css
+++ b/css/room_01.css
@@ -16,7 +16,8 @@
     overflow: hidden;
 }
 .slides{
-    width:100%; height:600px;
+    width:100%; 
+    height:30em;
 }
 .slides div{
     display:flex;
@@ -25,8 +26,9 @@
     transition:1.5s;
 }
 .slides div img{
-    min-width: 100%;
+    width:100%;
     object-fit: cover;
+    min-height:500px;
 }
 
 /* direc */
@@ -246,8 +248,11 @@
         width:50%;
         height:400px;
     }
+    .pla h2{
+        font-size:16px;
+    }
     .pla p{
-        margin:15px auto 0;
+        width: 100px;
     }
     .all_special{
         padding-top:10%;
