--- a/css/travel.css
+++ b/css/travel.css
@@ -16,9 +16,9 @@ ul,li{list-style: none; margin:0; padding:0;}
     width: 100%;
     min-height: 500px;
     left: 50%;
-    -webkit-transform: translate(-50%, -10%);
-    -ms-transform: translate(-50%, -10%);
-    transform: translate(-50%, -10%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
     position: absolute;
 }
 .imgHolder::after{
@@ -157,15 +157,8 @@ ul,li{list-style: none; margin:0; padding:0;}
 @media (max-width:768px){
     html{width:100%;}
     main{margin:42px 0 0;}
-    .pSection01 div:nth-of-type(1){
-        top:15%;
-    }
-    .pSection01 div h2{
-        font-size:40px;
-    }
-    .pSection01 div h4{
-        width: 80%;
-        margin: 0 auto;
+    section{
+        margin-top: 100px;
     }
     .tripwrap{
         height:9650px;
